--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     <div class="container">
         <div class="card">
             <div class="sneaker">
-                <div class="circle">
-                    <img src="adidas.png" alt="adidas" width="700">
-                </div>
+                <img src="adidas.png" alt="adidas" width="700">
+                <div class="circle"></div>
             </div>
             <div class="info">
                 <h1 class="title">Adidas ZX</h1>
-                <h3>FUTURE-READY TRAINERS WITH WRAPPED BOOTS FOR EXCEPTION COMFORT.</h3>
+                <h3 class="description">FUTURE-READY TRAINERS WITH WRAPPED BOOTS FOR EXCEPTION COMFORT.</h3>
                 <div class="sizes">
                     <button>39</button>
                     <button>40</button>
